--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^4.3.0",
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.25.0",
     "htmlhint": "^1.1.4",
