--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "htmlhint": "^1.1.4",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "purescript": "^0.15.6",
+    "purs-backend-es": "^1.2.0",
+    "purs-tidy": "^0.9.2",
+    "spago": "^0.20.9",
     "stats.js": "^0.17.0",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
