--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "rm -rf dist && mkdir dist && spago build && vite build",
+    "build": "rm -rf dist && mkdir dist && spago -x prod.dhall build && vite build",
     "lint": "htmlhint index.html && eslint \"io/**\" \"players/**\" \"core/**\" \"firebase/**\" index.js",
     "preview": "vite preview"
   },
@@ -23,7 +23,8 @@
     "spago": "^0.20.9",
     "stats.js": "^0.17.0",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-inject-preload": "^1.1.0"
   },
   "dependencies": {
     "@awesome-cordova-plugins/android-full-screen": "^6.0.1",
