--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ assets/mansion.webp filter=lfs diff=lfs merge=lfs -text
 assets/cat.webp filter=lfs diff=lfs merge=lfs -text
 assets/catThumb.webp filter=lfs diff=lfs merge=lfs -text
 assets/mansionThumb.webp filter=lfs diff=lfs merge=lfs -text
+assets/manyCats.png filter=lfs diff=lfs merge=lfs -text
